# AnnKhodakova_qa_guru_homework_19

./: .env  conftest.py  pyproject.toml  pytest.ini
